Changes in api, swagger ui, custom css
