# routes/courses.js
@@ -1,70 +1,25 @@
 const express = require('express');
 const router = express.Router();
 const Course = require('../models/Course');
+const {
+  getCourses,
+  getCourse,
+  addCourse,
+  updateCourse,
+  deleteCourse
+} =  require('../controllers/courses');
 
-// get
-router.get('/', async (req, res, next) => {  
-  const courses = await Course.find();
-  res.status(200).json({
-    success: true,
-    data: courses
-  })
-});
+// api/v1/courses - Http Verbs: GET, POST
+router
+.route('/')
+.get(getCourses)
+.post(addCourse);
 
-// Get single course by id
-router.get('/:id', (req, res, next) => {  
-  
-  res.status(200).json({
-    success: true,
-    data: {id: req.params.id}
-  })
-})
-
-// post
-router.post('/', async (req, res, next) => { 
-  try {
-    console.log(req.body.name)
-    let course = await Course.findOne({name: req.body.name});
-    console.log(course)
-    if(course) {
-      return res.status(400).json({
-        success: true,
-        data: {},
-        error: 'Course name already taken'
-      })
-    }
-     course = await Course.create(req.body);
-   
-    res.status(201).json({
-      success: true,
-      data: course
-    })
-  } catch (err) {
-    console.log(err);
-    res.status(400).json({
-      success: true,
-      data: {},
-      error: err.message
-    })
-  }
-})
-
-
-// put
-router.put('/:id', (req, res, next) => {  
-  res.status(200).json({
-    success: true,
-    data: {id: req.params.id}
-  })
-})
-
-
-// delete
-router.delete('/:id', (req, res, next) => {  
-  res.status(200).json({
-    success: true,
-    data: {id: req.params.id}
-  })
-})
+// api/v1/courses/:id - Http Verbs: GET, PUT, DELETE
+router
+  .route('/:id')
+  .get(getCourse)
+  .put(updateCourse)
+  .delete(deleteCourse);
 
 module.exports = router;
