# utils/ErrorResponse.js
@@ -1,0 +1,8 @@
+class ErrorResponse extends Error {
+    constructor(message, statusCode) {
+      super(message);
+      this.statusCode = statusCode
+    }
+}
+
+module.exports = ErrorResponse;
